versions/v0.17.x/service/go-sdk/client/load-index.mdx
---
title: "Load Index"
mode: "wide"
---

Loads an existing encrypted index by name and key. The provided key must match the one used during index creation.

```go
func (c *Client) LoadIndex(ctx context.Context, indexName string, indexKey []byte) (*EncryptedIndex, error)
```

### Parameters

| Parameter | Type | Description |
|-----------|------|-------------|
| `ctx` | `context.Context` | Context for cancellation/timeouts |
| `indexName` | `string` | Name of the existing index to load |
| `indexKey` | `[]byte` | _(Optional)_ 32-byte encryption key used during index creation. Required for indexes created with the SDK-supplied KEK path (`provider: none`); pass `nil` or a zero-length slice for KMS-backed indexes. |

<Note>In v0.17 `indexKey` is optional. KMS-backed indexes (created with `KmsName`) omit it — the server resolves the DEK via the persisted `KMSBlob`. SDK-supplied indexes must re-supply the same 32-byte key here.</Note>

<Warning>
For SDK-supplied indexes, the encryption key must exactly match the key used during index creation. KMS-backed indexes are tied to their `KmsName` slot in the service YAML — load fails if that slot is missing or unreachable.
</Warning>

### Returns

| Type | Description |
|------|-------------|
| `*EncryptedIndex` | Handle for performing vector operations on the loaded index |
| `error` | Any error encountered during index loading |

### Exceptions

<AccordionGroup>
    <Accordion title="Error">
        - Throws if the index doesn't exist on the server
        - Throws if the encryption key is incorrect or invalid
        - Throws if the server returns an HTTP error status.
        - Throws if authentication fails (invalid API key).
    </Accordion>
    <Accordion title="Service Errors">
        - Throws if the CyborgDB service is unavailable or unreachable.
        - Throws if there are internal server errors on the CyborgDB service.
    </Accordion>
</AccordionGroup>

### Example Usage

```go
package main

import (
    "context"
    "encoding/hex"
    "log"
    
    "github.com/cyborginc/cyborgdb-go"
)

func main() {
    // Create client
    client, err := cyborgdb.NewClient("http://localhost:8000", "your-api-key")
    if err != nil {
        log.Fatal(err)
    }
    
    // Replace with your actual encryption key (must be exactly 32 bytes)
    key := []byte("example-index-key-12345678901234")

    // Load existing SDK-supplied index
    ctx := context.Background()
    index, err := client.LoadIndex(ctx, "my-documents", key)
    if err != nil {
        log.Fatal("Failed to load index:", err)
    }

    log.Printf("Loaded index: %s", index.GetIndexName())

    dim, _ := index.GetDimension(ctx)
    log.Printf("Dimension: %d", dim)

    trained, err := index.IsTrained(ctx)
    if err != nil {
        log.Fatal("Failed to check training status:", err)
    }
    log.Printf("Is trained: %t", trained)

    // Load a KMS-backed index — no key required
    kmsIndex, err := client.LoadIndex(ctx, "kms-documents", nil)
    if err != nil {
        log.Fatal("Failed to load KMS index:", err)
    }
    _ = kmsIndex
}
```
